# cqhttp-ext-long-polling

./: CMakeLists.txt  CMakeSettings.json  README.md
scripts/: post_build.ps1
src/: channel.h  main.cpp
